welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: '=>' expected but 'with' found.
    case a with Math.abs(a)<90 -> false
           ^