welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case a with Math.abs(a)<90 -> false
    case a with Math.abs(a)<111 -> true
    case a with Math.abs(a)<190 -> false
    case a with Math.abs(a)<211 -> true
  }
}